io/parser/y.output

state 0
	$accept: .start $end 

	error  shift 3
	START_WHERE_CONDITION  shift 2
	.  error

	start  goto 1

state 1
	$accept:  start.$end 
	start:  start.EOF 

	$end  accept
	EOF  shift 4
	.  error


state 2
	start:  START_WHERE_CONDITION.stmt 
	where_conditions: .    (46)

	LEFT_BRACE  shift 7
	.  reduce 46 (src line 269)

	stmt  goto 5
	where_conditions  goto 6

state 3
	start:  error.    (3)

	.  reduce 3 (src line 105)


state 4
	start:  start EOF.    (2)

	.  reduce 2 (src line 104)


state 5
	start:  START_WHERE_CONDITION stmt.    (1)

	.  reduce 1 (src line 100)


state 6
	stmt:  where_conditions.    (4)

	.  reduce 4 (src line 111)


state 7
	where_conditions:  LEFT_BRACE.filter_list RIGHT_BRACE 
	filter_list: .    (50)

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  reduce 50 (src line 285)

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	filter_list  goto 8
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 10
	expr  goto 12
	function_expr  goto 17
	paren_expr  goto 11
	filter_elem  goto 9
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 8
	where_conditions:  LEFT_BRACE filter_list.RIGHT_BRACE 
	filter_list:  filter_list.COMMA filter_elem 
	filter_list:  filter_list.COMMA 

	COMMA  shift 42
	RIGHT_BRACE  shift 41
	.  error


state 9
	filter_list:  filter_elem.    (47)

	.  reduce 47 (src line 276)


state 10
	expr:  binary_expr.    (9)
	filter_elem:  binary_expr.    (51)

	COMMA  reduce 51 (src line 289)
	RIGHT_BRACE  reduce 51 (src line 289)
	.  reduce 9 (src line 116)


state 11
	expr:  paren_expr.    (7)
	filter_elem:  paren_expr.    (52)

	COMMA  reduce 52 (src line 289)
	RIGHT_BRACE  reduce 52 (src line 289)
	.  reduce 7 (src line 116)


state 12
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	EQ  shift 56
	ADD  shift 43
	DIV  shift 44
	GTE  shift 45
	GT  shift 46
	LT  shift 49
	LTE  shift 50
	MOD  shift 51
	MUL  shift 52
	NEQ  shift 53
	POW  shift 54
	SUB  shift 55
	AND  shift 47
	OR  shift 48
	.  error


state 13
	array_elem:  columnref.    (35)
	binary_expr:  columnref.IN LEFT_BRACKET array_list RIGHT_BRACKET 

	IN  shift 57
	.  reduce 35 (src line 232)


state 14
	paren_expr:  LEFT_PAREN.expr RIGHT_PAREN 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 58
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 15
	expr:  array_elem.    (5)

	.  reduce 5 (src line 116)


state 16
	expr:  regex.    (6)

	.  reduce 6 (src line 116)


state 17
	expr:  function_expr.    (8)
	cascade_functions:  function_expr.DOT function_expr 

	DOT  shift 61
	.  reduce 8 (src line 116)


state 18
	expr:  cascade_functions.    (10)
	cascade_functions:  cascade_functions.DOT function_expr 

	DOT  shift 62
	.  reduce 10 (src line 116)


state 19
	columnref:  identifier.    (11)
	attr_expr:  identifier.DOT identifier 
	function_name:  identifier.    (68)

	LEFT_PAREN  reduce 68 (src line 377)
	DOT  shift 63
	.  reduce 11 (src line 119)


state 20
	columnref:  attr_expr.    (12)
	attr_expr:  attr_expr.DOT identifier 
	function_name:  attr_expr.    (69)

	LEFT_PAREN  reduce 69 (src line 381)
	DOT  shift 64
	.  reduce 12 (src line 123)


state 21
	array_elem:  number_literal.    (33)

	.  reduce 33 (src line 230)


state 22
	array_elem:  string_literal.    (34)

	.  reduce 34 (src line 231)


state 23
	array_elem:  nil_literal.    (36)

	.  reduce 36 (src line 233)


state 24
	array_elem:  bool_literal.    (37)

	.  reduce 37 (src line 234)


state 25
	array_elem:  star.    (38)

	.  reduce 38 (src line 235)


state 26
	regex:  RE.LEFT_PAREN string_literal RIGHT_PAREN 
	regex:  RE.LEFT_PAREN QUOTED_STRING RIGHT_PAREN 

	LEFT_PAREN  shift 65
	.  error


state 27
	function_expr:  function_name.LEFT_PAREN function_args RIGHT_PAREN 

	LEFT_PAREN  shift 66
	.  error


state 28
	identifier:  ID.    (74)

	.  reduce 74 (src line 419)


state 29
	identifier:  QUOTED_STRING.    (75)

	.  reduce 75 (src line 420)


state 30
	identifier:  IDENTIFIER.LEFT_PAREN string_literal RIGHT_PAREN 

	LEFT_PAREN  shift 67
	.  error


state 31
	number_literal:  NUMBER.    (70)

	.  reduce 70 (src line 388)


state 32
	number_literal:  unary_op.NUMBER 

	NUMBER  shift 68
	.  error


state 33
	string_literal:  STRING.    (17)

	.  reduce 17 (src line 149)


state 34
	nil_literal:  NIL.    (18)

	.  reduce 18 (src line 155)


state 35
	nil_literal:  NULL.    (19)

	.  reduce 19 (src line 159)


state 36
	bool_literal:  TRUE.    (20)

	.  reduce 20 (src line 165)


state 37
	bool_literal:  FALSE.    (21)

	.  reduce 21 (src line 169)


state 38
	star:  MUL.    (39)

	.  reduce 39 (src line 238)


state 39
	unary_op:  ADD.    (15)

	.  reduce 15 (src line 145)


state 40
	unary_op:  SUB.    (16)

	.  reduce 16 (src line 146)


state 41
	where_conditions:  LEFT_BRACE filter_list RIGHT_BRACE.    (45)

	.  reduce 45 (src line 265)


state 42
	filter_list:  filter_list COMMA.filter_elem 
	filter_list:  filter_list COMMA.    (49)

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  reduce 49 (src line 284)

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 10
	expr  goto 12
	function_expr  goto 17
	paren_expr  goto 11
	filter_elem  goto 69
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 43
	binary_expr:  expr ADD.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 70
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 44
	binary_expr:  expr DIV.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 71
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 45
	binary_expr:  expr GTE.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 72
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 46
	binary_expr:  expr GT.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 73
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 47
	binary_expr:  expr AND.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 74
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 48
	binary_expr:  expr OR.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 75
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 49
	binary_expr:  expr LT.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 76
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 50
	binary_expr:  expr LTE.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 77
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 51
	binary_expr:  expr MOD.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 78
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 52
	binary_expr:  expr MUL.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 79
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 53
	binary_expr:  expr NEQ.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 80
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 54
	binary_expr:  expr POW.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 81
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 55
	binary_expr:  expr SUB.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 82
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 56
	binary_expr:  expr EQ.expr 

	ID  shift 28
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  error

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 19
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 83
	function_expr  goto 17
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25

state 57
	binary_expr:  columnref IN.LEFT_BRACKET array_list RIGHT_BRACKET 

	LEFT_BRACKET  shift 84
	.  error


state 58
	paren_expr:  LEFT_PAREN expr.RIGHT_PAREN 
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	EQ  shift 56
	RIGHT_PAREN  shift 85
	ADD  shift 43
	DIV  shift 44
	GTE  shift 45
	GT  shift 46
	LT  shift 49
	LTE  shift 50
	MOD  shift 51
	MUL  shift 52
	NEQ  shift 53
	POW  shift 54
	SUB  shift 55
	AND  shift 47
	OR  shift 48
	.  error


state 59
	expr:  paren_expr.    (7)

	.  reduce 7 (src line 116)


state 60
	expr:  binary_expr.    (9)

	.  reduce 9 (src line 116)


state 61
	cascade_functions:  function_expr DOT.function_expr 

	ID  shift 28
	QUOTED_STRING  shift 29
	IDENTIFIER  shift 30
	.  error

	function_name  goto 27
	identifier  goto 87
	attr_expr  goto 88
	function_expr  goto 86

state 62
	cascade_functions:  cascade_functions DOT.function_expr 

	ID  shift 28
	QUOTED_STRING  shift 29
	IDENTIFIER  shift 30
	.  error

	function_name  goto 27
	identifier  goto 87
	attr_expr  goto 88
	function_expr  goto 89

state 63
	attr_expr:  identifier DOT.identifier 

	ID  shift 28
	QUOTED_STRING  shift 29
	IDENTIFIER  shift 30
	.  error

	identifier  goto 90

state 64
	attr_expr:  attr_expr DOT.identifier 

	ID  shift 28
	QUOTED_STRING  shift 29
	IDENTIFIER  shift 30
	.  error

	identifier  goto 91

state 65
	regex:  RE LEFT_PAREN.string_literal RIGHT_PAREN 
	regex:  RE LEFT_PAREN.QUOTED_STRING RIGHT_PAREN 

	STRING  shift 33
	QUOTED_STRING  shift 93
	.  error

	string_literal  goto 92

state 66
	function_expr:  function_name LEFT_PAREN.function_args RIGHT_PAREN 
	function_args: .    (29)

	ID  shift 28
	LEFT_BRACKET  shift 98
	LEFT_PAREN  shift 14
	NUMBER  shift 31
	STRING  shift 33
	QUOTED_STRING  shift 29
	ADD  shift 39
	MUL  shift 38
	SUB  shift 40
	TRUE  shift 36
	FALSE  shift 37
	IDENTIFIER  shift 30
	NIL  shift 34
	NULL  shift 35
	RE  shift 26
	.  reduce 29 (src line 208)

	unary_op  goto 32
	function_name  goto 27
	identifier  goto 99
	function_args  goto 94
	array_elem  goto 15
	attr_expr  goto 20
	binary_expr  goto 60
	expr  goto 97
	function_arg  goto 95
	function_expr  goto 17
	naming_arg  goto 96
	paren_expr  goto 59
	regex  goto 16
	columnref  goto 13
	bool_literal  goto 24
	string_literal  goto 22
	nil_literal  goto 23
	number_literal  goto 21
	cascade_functions  goto 18
	star  goto 25
